# fixie

./: BIBLIOGRAPHY.md  CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md  split_types.py
benches/: fix_benchmarks.rs
docs/: INDICATION_DESIGN.md  INFRASTRUCTURE_DESIGN.md  MASS_ORDER_DESIGN.md  MULTILEG_ORDER_DESIGN.md  NESTED_GROUPS.md  NESTED_GROUPS_IMPLEMENTATION.md  POSTTRADE_PARALLEL_WORKFLOW.md  POSTTRADE_SUMMARY.md  PRETRADE_PARALLEL_WORKFLOW.md  PRETRADE_REPEATING_GROUPS_TODO.md  PROGRAM_TRADING_DESIGN.md  QUICKSTART_PERFORMANCE.md  TESTING.md
src/: allocation.rs  components.rs  event_communication.rs  groups.rs  lib.rs  market_data.rs  market_structure.rs  messages.rs  multileg_orders.rs  network_status.rs  parser.rs  program_trading.rs  types.rs
src/message_types/: account_reporting.rs  allocation.rs  application_sequencing.rs  business_message_rejects.rs  confirmation.rs  confirmations.rs  indication.rs  infrastructure.rs  market_structure.rs  mass_orders.rs  mod.rs  order_cross_handling.rs  order_mass_handling.rs  position_maintenance.rs  quotation.rs  securities_reference.rs  settlement_instruction.rs  single_general_order_handling.rs  trade_capture_reporting.rs  user_management.rs
src/types/: communication.rs  cross.rs  indication.rs  infrastructure.rs  market_data.rs  market_structure.rs  mass_operations.rs  mod.rs  multileg.rs  order.rs  post_trade.rs  program_trading.rs  quotation.rs  securities.rs
tests/: event_communication_tests.rs  indication_tests.rs  integration_tests.rs  market_data_tests.rs  quotation_tests.rs
tests/fixtures/: README.md  (+18 more)
